keycloak-operator-eks-rds/04.keycloak-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-headless
  namespace: keycloak
spec:
  clusterIP: None
  selector:
    app: keycloak
  ports:
    - name: jgroups
      port: 7600
      targetPort: 7600    
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service-expose
  namespace: keycloak
spec:
  type: ClusterIP
  selector:
    app: keycloak
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: https
      port: 8443
      targetPort: 8443
    - name: management
      port: 9000
      targetPort: 9000
